--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -53,7 +53,7 @@ add_executable(source_clang_test source_clang_test.cc
 target_link_libraries(source_clang_test ${global_libraries})
 add_test(source_clang_test source_clang_test)
 
-if(LIBLLDB_FOUND)
+if(LIBLLDB_FOUND AND (NOT LIBCLANG_LIBRARIES STREQUAL "/usr/lib/llvm-3.5/lib/libclang.so"))
   add_executable(lldb_test lldb_test.cc
                  $<TARGET_OBJECTS:project_shared> $<TARGET_OBJECTS:stubs>)
   target_link_libraries(lldb_test ${global_libraries})
