Git integration through libgit2 (#244)
* Git integration, fixes #63

* Fixed a crash when deleting directories, added libgit2 to MSYS2 CI, adjusted colors slightly

* Git integration now supports debian stable

* Fixed compilation error on MSYS2

* Added git_test

* git_test fix

* Git integration: now updates correct paths on source save. Also added slight delay to source diff git monitor change signal

* git_test fixed

* Now monitors .git directory instead. The .git/index file does not always update on for instance: git commit -m ...

* Directories cleanup

* Fixed git status update on rename refactoring, and some additional cleanup

* Added menu items: Go to Next Diff, and Show Diff

* Fixed Go to Next Diff and Show Diff keybindings

* Minor fixes to git integration

* Added: implement method

* Minor fixes to Implement Method

* Minor fixes to source_diff

* source_diff: optimisations added, as well as some minor improvements

* Fixed a crash when trying to show diff in a buffer not related to a diff repository

* Git integration: MSYS2 support

* source_diff: source should now refresh correctly when .git directory has changed

* directories.cc: stop updating parent path colors when path including .git directory/file is found

* Spellcheck underline no longer shows for for instance '\n'

* Made directory view's git status update async

* Use boost::filesystem::path in git.*

* Optimisation: now stores a cache of git status, which can be slow, that is used when possible

* Source view will now grab focus when a selection dialog is shown

* Source menu should now be correctly updated

* Implement Method: improved

* git.cc: minor fix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ find_package(ASPELL REQUIRED)
 include(FindPkgConfig)
 pkg_check_modules(GTKMM gtkmm-3.0 REQUIRED)
 pkg_check_modules(GTKSVMM gtksourceviewmm-3.0 REQUIRED)
+pkg_check_modules(LIBGIT2 libgit2 REQUIRED)
 
 add_subdirectory("src")
 
