Improvement of selection and completion dialogs and tooltips. Can now open selection dialogs (Find Symbol (Ctags), Backtrace, Show Variables) without an opened buffer.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,7 +12,7 @@ set(project_files
     juci.cc
     notebook.cc
     project.cc
-    selectiondialog.cc
+    selection_dialog.cc
     terminal.cc
     tooltips.cc
     window.cc
