--- a/share/juci.desktop
+++ b/share/juci.desktop
@@ -8,3 +8,4 @@ Type=Application
 StartupNotify=true
 MimeType=text/plain;text/x-c++hdr;text/x-c++src;text/x-chdr;text/x-csrc;text/x-cmake;
 Categories=Utility;Development;TextEditor;
+Icon=juci
