Added current parameter completion that shows possible arguments. Also fixes some issues with non-interactive completion, optimizations to selection/completion dialogs, and some cleanup."

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,6 +19,7 @@ set(project_files
 
 #Files used both in ../src and ../tests
 set(project_shared_files
+    autocomplete.cc
     cmake.cc
     compile_commands.cc
     ctags.cc
