--- a/tests/lldb_test_files/CMakeLists.txt
+++ b/tests/lldb_test_files/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8)
 
-set(CMAKE_CXX_FLAGS "-g")
+add_compile_options(-O0 -g)
 
 add_executable(lldb_test_executable main.cpp)
