--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/cppit/libclangmm
 [submodule "tiny-process-library"]
 	path = tiny-process-library
-	url = https://github.com/eidheim/tiny-process-library
+	url = https://gitlab.com/eidheim/tiny-process-library
